# moodle_cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: api.rs  assignment.rs  auth.rs  html2text.rs  main.rs  quiz.rs  resource.rs  types.rs  ui.rs
