[package]
name = "moodle_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = [
  "blocking",
  "cookies",
  "form",
  "multipart",
] }
rpassword = "7.5.4"
scraper = "0.27"
totp-rs = { version = "5.6", features = ["otpauth"] }
regex = "1.11"
url = "2"

[profile.release]
strip = true
opt-level = "z"
